--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  padding: 160px 0 16px;
+  padding: 260px 0 16px;
 
   &::before {
     content: '';
